--- a/.github/workflows/go-test-firebase.yml
+++ b/.github/workflows/go-test-firebase.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Run tests
         env:
           FIREBASE_DATABASE_EMULATOR_HOST: localhost:9000
-          ENV_LOCATION: ${{ vars.GITHUB_WORKSPACE }}/pkg/setting/files/setting.testing.yaml
+          ENV_LOCATION: ${{ env.GITHUB_WORKSPACE }}/pkg/setting/files/setting.testing.yaml
         run: go test -p=1 -race -coverprofile=coverage.txt -covermode=atomic ./... #gosetup
