--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,11 @@
 {
   "emulators": {
     "database": {
+      "host": "127.0.0.1",
       "port": 9000
     },
     "ui": {
+      "host": "127.0.0.1",
       "enabled": false
     },
     "singleProjectMode": true
