--- a/pkg/config/setting.sample.yaml
+++ b/pkg/config/setting.sample.yaml
@@ -15,6 +15,8 @@ infrastructure:
     project_id: some-project-id
     use_credentials_file: true
     credentials_file_path: /dev/null
+    firebase:
+      database_url: "http://localhost:9000"
 third_party:
 service:
   authentication:
