--- a/pkg/config/setting.template.yaml
+++ b/pkg/config/setting.template.yaml
@@ -15,6 +15,8 @@ infrastructure:
     project_id:
     use_credentials_file:
     credentials_file_path:
+    firebase:
+      database_url:
 third_party:
 service:
   authentication:
